[package]
name = "brainsurf"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "image", "debug", "advanced"] }
open = "5.3.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rfd = "0.15.4"
serde = "1.0.228"
url = "2.5.7"
walkdir = "2.5.0"
